Add knip config json

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,7 +24,10 @@
     "noUncheckedSideEffectImports": true,
 
     /* Custom */
-    "baseUrl": "./src"
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src"]
 }
