--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "7z-wasm": "^1.2.0",
     "antd": "^5.26.7",
     "axios": "^1.11.0",
+    "csstype": "^3.1.3",
+    "dayjs": "^1.11.13",
     "ethers": "^6.15.0",
+    "i18next": "^25.3.6",
     "i18next-http-backend": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
@@ -48,8 +51,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^6.3.5",
-    "vite-plugin-node-polyfills": "^0.23.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-plugin-node-polyfills": "^0.23.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
