--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,8 @@ jobs:
             **/package-lock.json
       - name: Install dependencies
         run: npm ci
+      - name: Check for unused code
+        run: npm run knip
       - name: Lint
         run: npm run lint
       - name: run typecheck
