--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,7 @@ jobs:
         run: npm run typecheck
   build:
     needs: [setup, lint]
+    environment: preview
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
@@ -68,14 +69,11 @@ jobs:
             **/package-lock.json
       - name: Install dependencies
         run: npm ci
-      - name: Build extension
+      - name: Build marketplace UI
+        env:
+          VITE_MARKETPLACE_URL: https://store.vultisigplugin.app/api/
         run: npm run build
-  deploy:
-    needs: [build]
-    environment: preview
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Deploy
+      - name: Deploy to preview
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
           SERVER_USERNAME: ${{ secrets.SSH_USER }}
@@ -85,13 +83,10 @@ jobs:
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H $SERVER_HOST >> ~/.ssh/known_hosts
+          ssh-keyscan $SERVER_HOST >> ~/.ssh/known_hosts
 
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa $SERVER_USERNAME@$SERVER_HOST "
-          cd $DEPLOY_DIR &&
-          git remote set-url origin git@github.com:vultisig/plugin-marketplace.git &&
-          git pull origin main &&
-          npm install &&
-          npm run build &&
-          systemctl restart frontend
-          "
+          # Sync built files to server
+          rsync -avz --delete \
+            -e "ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa" \
+            ./dist/ \
+            $SERVER_USERNAME@$SERVER_HOST:$DEPLOY_DIR/
