--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,7 @@ name: Marketplace build
 
 on:
   push:
+    branches: ['main']
   pull_request:
     branches: ['main']
 
@@ -73,6 +74,23 @@ jobs:
         env:
           VITE_MARKETPLACE_URL: https://store.vultisigplugin.app/api/
         run: npm run build
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-files
+          path: dist/
+          retention-days: 7
+  deploy:
+    needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    environment: preview
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-files
+          path: dist/
       - name: Deploy to preview
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
@@ -84,7 +102,6 @@ jobs:
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan $SERVER_HOST >> ~/.ssh/known_hosts
-
           # Sync built files to server
           rsync -avz --delete \
             ./dist/ \
