Add suggestion API to policy form

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -3,5 +3,7 @@ inputs:
   - directory: proto
 plugins:
   - local: protoc-gen-es
-    opt: target=ts
     out: src/proto
+    opt:
+      - target=ts
+      - json_types=true
