ci: set fee plugin ID

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,6 +73,7 @@ jobs:
       - name: Build marketplace UI
         env:
           VITE_MARKETPLACE_URL: https://store.vultisigplugin.app/api/
+          VITE_FEE_PLUGIN_ID: vultisig-fees-feee
         run: npm run build
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
