--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^16.0.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.9.3",
     "styled-components": "^6.1.19",
     "uuid": "^13.0.0"
