--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vultisig-plugin",
+  "name": "vultisig-app-store",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,44 +15,46 @@
   "dependencies": {
     "@bufbuild/protobuf": "^2.9.0",
     "7z-wasm": "^1.2.0",
-    "antd": "^5.27.4",
+    "antd": "^5.27.5",
     "axios": "^1.12.2",
     "csstype": "^3.1.3",
     "dayjs": "^1.11.18",
     "ethers": "^6.15.0",
-    "i18next": "^25.5.2",
+    "i18next": "^25.6.0",
     "i18next-http-backend": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "p-memoize": "^8.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-i18next": "^16.0.0",
+    "react-i18next": "^16.1.0",
     "react-responsive": "^10.0.1",
-    "react-router-dom": "^7.9.3",
+    "react-router-dom": "^7.9.4",
     "styled-components": "^6.1.19",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@bufbuild/buf": "^1.57.2",
+    "@bufbuild/buf": "^1.58.0",
     "@bufbuild/protoc-gen-es": "^2.9.0",
     "@eslint/js": "^9.36.0",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^24.5.2",
-    "@types/react": "^19.1.15",
+    "@types/node": "^24.8.1",
+    "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.4.0",
-    "knip": "^5.64.1",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.44.1",
-    "vite": "^7.1.7",
+    "knip": "^5.66.0",
+    "postcss": "^8.5.6",
+    "sass": "^1.93.2",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.1",
+    "vite": "^7.1.10",
     "vite-plugin-node-polyfills": "^0.24.0"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  }
 }
