Refactor file structure and update dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-VITE_MARKETPLACE_URL=http://localhost:8080
-VITE_FEE_PLUGIN_ID=plugin-slug
+VITE_APP_STORE_URL=http://localhost:8080
+VITE_FEE_APP_ID=plugin-slug
+VITE_VULTISIG_SERVER=http://localhost:3000
