--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,13 +2,13 @@ name: Marketplace build
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
   pull_request:
-    branches: ['main']
+    branches: ["main"]
 
 env:
   # Necessary for most environments as build failure can occur due to OOM issues
-  NODE_OPTIONS: '--max-old-space-size=4096'
+  NODE_OPTIONS: "--max-old-space-size=4096"
 
 jobs:
   setup:
@@ -22,8 +22,8 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '23.7.0'
-          cache: 'npm'
+          node-version: "23.7.0"
+          cache: "npm"
           cache-dependency-path: |
             **/package-lock.json
 
@@ -40,8 +40,8 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '23.7.0'
-          cache: 'npm'
+          node-version: "23.7.0"
+          cache: "npm"
           cache-dependency-path: |
             **/package-lock.json
       - name: Install dependencies
@@ -64,16 +64,17 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '23.7.0'
-          cache: 'npm'
+          node-version: "23.7.0"
+          cache: "npm"
           cache-dependency-path: |
             **/package-lock.json
       - name: Install dependencies
         run: npm ci
       - name: Build marketplace UI
         env:
-          VITE_MARKETPLACE_URL: https://verifier-server-dev.fly.dev
-          VITE_FEE_PLUGIN_ID: vultisig-fees-feee
+          VITE_APP_STORE_URL: https://verifier-server-dev.fly.dev
+          VITE_FEE_APP_ID: vultisig-fees-feee
+          VITE_VULTISIG_SERVER: https://api.vultisig.com
         run: npm run build
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
