--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@bufbuild/protobuf": "^2.10.0",
+    "@tanstack/query-async-storage-persister": "^5.90.8",
+    "@tanstack/react-query": "^5.90.6",
+    "@tanstack/react-query-persist-client": "^5.90.8",
     "7z-wasm": "^1.2.0",
     "antd": "^5.28.0",
     "axios": "^1.13.1",
