--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/query-async-storage-persister": "^5.90.8",
     "@tanstack/react-query": "^5.90.6",
     "@tanstack/react-query-persist-client": "^5.90.8",
+    "@trustwallet/wallet-core": "^4.3.21",
     "7z-wasm": "^1.2.0",
     "antd": "^5.28.0",
     "axios": "^1.13.1",
@@ -58,7 +59,6 @@
     "sass": "^1.93.3",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.2",
-    "vite": "^7.1.12",
-    "vite-plugin-node-polyfills": "^0.24.0"
+    "vite": "^7.1.12"
   }
 }
