--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Marketplace build
 
 on:
   push:
-    branches: ['main']
+    branches: ['main', 'feat/production*']
     tags: ['release/*']
   pull_request:
     branches: ['main']
@@ -146,7 +146,7 @@ jobs:
 
   deploy-production:
     needs: build-production
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/release/')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/feat/production')
     environment: production
     runs-on: ubuntu-22.04
     steps:
