--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,7 +88,7 @@ jobs:
 
   build-production:
     needs: [setup, lint]
-    if: startsWith(github.ref, 'refs/tags/release/')
+    if: startsWith(github.ref, 'refs/heads/feat/production')
     environment: production
     runs-on: ubuntu-22.04
     steps:
