--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,8 +75,9 @@ jobs:
         run: npm ci
       - name: Build marketplace UI
         env:
-          VITE_MARKETPLACE_URL: ${{ secrets.VITE_MARKETPLACE_URL }}
-          VITE_FEE_PLUGIN_ID: ${{ secrets.VITE_FEE_PLUGIN_ID }}
+          VITE_APP_STORE_URL: ${{ secrets.VITE_APP_STORE_URL }}
+          VITE_FEE_APP_ID: ${{ secrets.VITE_FEE_APP_ID }}
+          VITE_VULTISIG_SERVER: ${{ secrets.VITE_VULTISIG_SERVER }}
         run: npm run build
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
@@ -106,8 +107,9 @@ jobs:
         run: npm ci
       - name: Build marketplace UI
         env:
-          VITE_MARKETPLACE_URL: ${{ secrets.VITE_MARKETPLACE_URL }}
-          VITE_FEE_PLUGIN_ID: ${{ secrets.VITE_FEE_PLUGIN_ID }}
+          VITE_APP_STORE_URL: ${{ secrets.VITE_APP_STORE_URL }}
+          VITE_FEE_APP_ID: ${{ secrets.VITE_FEE_APP_ID }}
+          VITE_VULTISIG_SERVER: ${{ secrets.VITE_VULTISIG_SERVER }}
         run: npm run build
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
