--- a/package.json
+++ b/package.json
@@ -13,48 +13,52 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@bufbuild/protobuf": "^2.9.0",
+    "@bufbuild/protobuf": "^2.10.0",
+    "@tanstack/query-async-storage-persister": "^5.90.8",
+    "@tanstack/react-query": "^5.90.6",
+    "@tanstack/react-query-persist-client": "^5.90.8",
+    "@trustwallet/wallet-core": "^4.3.22",
     "7z-wasm": "^1.2.0",
-    "antd": "^5.27.5",
-    "axios": "^1.12.2",
+    "antd": "^5.28.0",
+    "axios": "^1.13.2",
     "csstype": "^3.1.3",
-    "dayjs": "^1.11.18",
+    "dayjs": "^1.11.19",
     "ethers": "^6.15.0",
     "i18next": "^25.6.0",
     "i18next-http-backend": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "lodash-es": "^4.17.21",
     "p-memoize": "^8.0.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-i18next": "^16.1.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "react-i18next": "^16.2.4",
     "react-responsive": "^10.0.1",
-    "react-router-dom": "^7.9.4",
+    "react-router-dom": "^7.9.5",
     "styled-components": "^6.1.19",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "viem": "^2.38.6"
   },
   "devDependencies": {
-    "@bufbuild/buf": "^1.58.0",
-    "@bufbuild/protoc-gen-es": "^2.9.0",
-    "@eslint/js": "^9.36.0",
+    "@bufbuild/buf": "^1.59.0",
+    "@bufbuild/protoc-gen-es": "^2.10.0",
+    "@eslint/js": "^9.39.1",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^24.8.1",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@types/styled-components": "^5.1.34",
-    "@vitejs/plugin-react": "^5.0.4",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "@types/node": "^24.10.0",
+    "@types/styled-components": "^5.1.35",
+    "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
+    "eslint-plugin-react-hooks": "^6.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "globals": "^16.4.0",
-    "knip": "^5.66.0",
+    "globals": "^16.5.0",
+    "knip": "^5.67.1",
     "postcss": "^8.5.6",
-    "sass": "^1.93.2",
+    "sass": "^1.93.3",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.1",
-    "vite": "^7.1.10",
-    "vite-plugin-node-polyfills": "^0.24.0"
+    "typescript-eslint": "^8.46.3",
+    "vite": "^7.1.12"
   }
 }
