--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 VITE_APP_STORE_URL=http://localhost:8080
 VITE_FEE_APP_ID=app-slug
+VITE_FREE_MODE=boolean
 VITE_RECURRING_SENDS_APP_ID=app-slug
 VITE_RECURRING_SWAPS_APP_ID=app-slug
 VITE_VULTISIG_SERVER=http://localhost:3000
