--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "csstype": "^3.2.3",
     "dayjs": "^1.11.19",
     "ethers": "^6.16.0",
+    "lodash-es": "^4.17.22",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "lodash-es": "^4.17.22",
+    "react-helmet-async": "^2.0.5",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.3",
     "styled-components": "^6.1.19",
@@ -39,9 +40,9 @@
     "@bufbuild/protoc-gen-es": "^2.10.2",
     "@eslint/js": "^9.39.2",
     "@types/lodash-es": "^4.17.12",
+    "@types/node": "^25.0.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.7",
-    "@types/node": "^25.0.3",
     "@types/styled-components": "^5.1.36",
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.23",
