--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-persist-client": "^5.90.14",
     "@trustwallet/wallet-core": "^4.4.5",
+    "@vultisig/sdk": "^0.2.0-alpha.7",
     "antd": "^6.1.2",
     "axios": "^1.13.2",
     "csstype": "^3.2.3",
     "dayjs": "^1.11.19",
     "ethers": "^6.16.0",
+    "lodash-es": "^4.17.22",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "lodash-es": "^4.17.22",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.3",
     "styled-components": "^6.1.19",
@@ -39,9 +40,9 @@
     "@bufbuild/protoc-gen-es": "^2.10.2",
     "@eslint/js": "^9.39.2",
     "@types/lodash-es": "^4.17.12",
+    "@types/node": "^25.0.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.7",
-    "@types/node": "^25.0.3",
     "@types/styled-components": "^5.1.36",
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.23",
@@ -56,6 +57,7 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.1",
     "vite": "^7.3.0",
-    "vite-plugin-node-polyfills": "^0.24.0"
+    "vite-plugin-node-polyfills": "^0.24.0",
+    "vite-plugin-wasm": "^3.5.0"
   }
 }
