--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   },
   "dependencies": {
     "@bufbuild/protobuf": "^2.10.2",
-    "@tanstack/query-async-storage-persister": "^5.90.14",
-    "@tanstack/react-query": "^5.90.12",
-    "@tanstack/react-query-persist-client": "^5.90.14",
-    "@trustwallet/wallet-core": "^4.4.5",
-    "@vultisig/sdk": "^0.2.0-alpha.7",
-    "antd": "^6.1.2",
+    "@tanstack/query-async-storage-persister": "^5.90.16",
+    "@tanstack/react-query": "^5.90.14",
+    "@tanstack/react-query-persist-client": "^5.90.16",
+    "@trustwallet/wallet-core": "^4.5.0",
+    "@vultisig/sdk": "^0.2.0-beta.8",
+    "antd": "^6.1.3",
     "axios": "^1.13.2",
     "csstype": "^3.2.3",
     "dayjs": "^1.11.19",
@@ -49,7 +49,7 @@
     "eslint-plugin-react-refresh": "^0.4.26",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.5.0",
-    "knip": "^5.77.1",
+    "knip": "^5.78.0",
     "postcss": "^8.5.6",
     "sass": "^1.97.1",
     "typescript": "^5.9.3",
