--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/node": "^25.0.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.7",
+    "@types/react-helmet-async": "^1.0.1",
     "@types/styled-components": "^5.1.36",
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.23",
